tests/negative/dave_outlinesinwrongplaces.opml
<?xml version="1.0" encoding="ISO-8859-1"?><opml version="1.1">	<head>		<title>Unknown outline type</title>		<outline text="This is in a wrong place."/>		</head>	<body>		<outline text="This is in a right place."/>		</body>	<outline text="This is in a wrong place."/>	</opml>